--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,8 +23,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        push: true
-        tags: sfarhad/telegram-bot-protests-in-berlin:latest  # Replace with your Docker Hub username/repository
+    - name: Build and push Docker image using Docker Compose
+      run: |
+        docker compose build
+        docker compose push
