Use Deploy step env to define env vars
+ restructure :apple:

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,16 +19,37 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" | base64 -d > ~/id_rsa
         chmod 600 ~/id_rsa
     - name: Deploy to Google Cloud
+      env:
+        BRANCH: main
+        CONTAINER_DIR: telegram-bot-protests-in-berlin 
+        CONTAINER_NAME_1: postgres_db
+        CONTAINER_NAME_2: protestcrawler
+        CONTAINER_NAME_3: telegrambot
+        TG_BOT_TOKEN: ${{secrets.TG_BOT_TOKEN}}
+        IP_ADDRESS: ${{secrets.SSH_HOST}}
+        SSL_PORT: ${{secrets.SSL_PORT}}
+        SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
       run: |
-        ssh-keyscan -t rsa ${{ secrets.SSH_HOST }} >> ~/known_hosts
-        ssh -v -o UserKnownHostsFile=~/known_hosts \
-            -i ~/id_rsa ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_HOST }} \
-                "export TG_BOT_TOKEN=${{secrets.TG_BOT_TOKEN}} \
-                && export IP_ADDRESS=${{secrets.SSH_HOST}} \
-                && cd telegram-bot-protests-in-berlin \
+        ssh-keyscan -t rsa $IP_ADDRESS >> ~/known_hosts
+        ssh -o UserKnownHostsFile=~/known_hosts \
+            -i ~/id_rsa $SSH_USERNAME@$IP_ADDRESS \
+                "export BRANCH=${{env.BRANCH}} \
+                && export CONTAINER_DIR=${{env.CONTAINER_DIR}} \
+                && export CONTAINER_NAME_1=${{env.CONTAINER_NAME_1}} \
+                && export CONTAINER_NAME_2=${{env.CONTAINER_NAME_2}} \
+                && export CONTAINER_NAME_3=${{env.CONTAINER_NAME_3}} \
+                && export SSL_PORT=${{env.SSL_PORT}} \
+                && export TG_BOT_TOKEN=${{env.TG_BOT_TOKEN}} \
+                && export IP_ADDRESS=${{env.IP_ADDRESS}} \
+                && cd $CONTAINER_DIR \
                 && git fetch --all \
-                && git switch main \
-                && git merge origin/main \
+                && git switch $BRANCH \
+                && git merge origin/$BRANCH \
                 && docker compose down \
                 && docker system prune -af \
-                && docker compose up -d"
+                && docker compose up -d \
+                && echo Check whether the docker containers are running... \
+                && docker ps -q --filter name=^${CONTAINER_NAME_1}$ | grep -q . \
+                && docker ps -q --filter name=^${CONTAINER_NAME_2}$ | grep -q . \
+                && docker ps -q --filter name=^${CONTAINER_NAME_3}$ | grep -q . \
+                && echo All docker containers are running."
