--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           cd main_repo
           pip install -r ${{env.REPO}}/requirements.txt
-          pip install -r S{{SPHINX_SOURCE}}/requirements.txt
+          pip install -r S{{env.SPHINX_SOURCE}}/requirements.txt
           sphinx-build -b html docs/source docs/build
 
       - name: Checkout Documentation Branch
