Persist data beyond the lifecycle of docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
         POSTGRES_PASSWORD: '1234'
         POSTGRES_DB: 'postgres'
         log_statement: "all"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     ports:
       - '5432:5432'
   protestcrawler:
