--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,10 @@ services:
     container_name: protestcrawler
     build: "protestcrawler"
     image: ${PROTESTCRAWLER_IMAGE_BUILD:-sfarhad/protestcrawler:0.0.0}
+    extra_hosts:
+     - "host.docker.internal:host-gateway"
+    environment:
+     - PROXY=http://host.docker.internal:8118
   telegrambot:
     container_name: telegrambot
     build: "telegrambot"
