Attach docker to the host to connect to privoxy
The default value for network_mode is bridge but if the env var NETWORK_MODE is set, then it is assigned to it.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,7 @@ services:
     container_name: protestcrawler
     build: "protestcrawler"
     image: ${PROTESTCRAWLER_IMAGE_BUILD:-sfarhad/protestcrawler:0.0.0}
-    extra_hosts:
-     - "host.docker.internal:host-gateway"
-    environment:
-     - PROXY=http://host.docker.internal:8118
+    network_mode: ${NETWORK_MODE:-bridge}
     volumes:
       - ./protestcrawler/output:/app/output
   telegrambot:
