--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     image: dockage/tor-privoxy:latest
     ports:                     
       - "9051:9051" # Tor control port
-      - "8118:8118" # Privoxy   
+        #  - "8118:8118" # Privoxy   
   postgres_db:
     image: 'postgres:14.1-alpine'
     restart: 'always'
@@ -19,8 +19,8 @@ services:
         log_statement: "all"
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
-    ports:
-      - '5432:5432' # postgresql
+        #ports:
+        #  - '5432:5432' # postgresql
   protestcrawler:
     container_name: protestcrawler
     build: "protestcrawler"
