--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   build-and-push-to-dockerhub:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
     - name: Check Out Repo
       uses: actions/checkout@v3
@@ -25,13 +25,18 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+      with:
+        platforms: arm/v7
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
     - name: Build and push Docker image using Docker Compose
       run: |
-        docker compose build
-        docker compose push
+        docker compose build --platform linux/arm/v7
+        docker compose push  
 
   deploy-on-host:
     runs-on: self-hosted
