Bugfix for Dockerhub build and push

--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -35,7 +35,8 @@ jobs:
 
     - name: Build and push Docker image using Docker Compose
       run: |
-        docker compose build --platform linux/arm/v7
+        export DOCKER_DEFAULT_PLATFORM=linux/arm/v7
+        docker compose build
         docker compose push  
 
   deploy-on-host:
