Expand git switch command into two commands
because it was not supported.

--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -60,7 +60,8 @@ jobs:
         export SSL_PORT=$SSL_PORT && 
         cd $CONTAINER_DIR  && 
         git fetch --all  && 
-        git switch $BRANCH  && 
+        git rev-parse --verify --quiet $BRANCH &&
+        git checkout $BRANCH  && 
         git merge origin/$BRANCH  && 
         docker compose pull  && 
         docker compose down  && 
