--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -28,14 +28,28 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
       with:
-        platforms: arm64
+        platforms: arm64,amd64
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
+    - name: Determine architecture
+      id: arch
+      run: echo "ARCH=$(uname -m)" >> $GITHUB_ENV
+
+    - name: Set Docker platform based on architecture
+      run: |
+        if [ "${{ env.ARCH }}" == "x86_64" ]; then
+          echo "DOCKER_DEFAULT_PLATFORM=linux/amd64" >> $GITHUB_ENV
+        elif [ "${{ env.ARCH }}" == "aarch64" ]; then
+          echo "DOCKER_DEFAULT_PLATFORM=linux/arm64" >> $GITHUB_ENV
+        else
+          echo "Unsupported architecture: ${{ env.ARCH }}"
+          exit 1
+        fi
+
     - name: Build and push Docker image using Docker Compose
       run: |
-        export DOCKER_DEFAULT_PLATFORM=linux/arm64
         docker compose build
         docker compose push  
 
