--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -15,6 +15,8 @@ on:
 jobs:
   determine-runner:
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     outputs:
       selected-runner: ${{ steps.select-runner.outputs.runner }}
       docker-platform: ${{ steps.select-runner.outputs.platform }}
