--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -13,6 +13,64 @@ on:
   workflow_dispatch:
 
 jobs:
+  build-x86:
+    name: Build on x86
+    runs-on: self-hosted
+    if: runner.os == 'Linux' && runner.arch == 'X64' && github.event_name == 'push' # Add a condition that always evaluates to false if no runner is available
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: amd64
+
+      - name: Set Docker platform based on the runner
+        run: |
+          echo "DOCKER_DEFAULT_PLATFORM=linux/amd64" >> $GITHUB_ENV
+
+      - name: Build and push Docker image using Docker Compose
+        run: |
+          docker compose build
+          docker compose push
+
+
+  build-arm64:
+    name: Build on ARM64
+    runs-on: self-hosted
+    if: runner.os == 'Linux' && runner.arch == 'ARM64'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64
+
+      - name: Set Docker platform based on the runner
+        run: |
+          echo "DOCKER_DEFAULT_PLATFORM=linux/arm64" >> $GITHUB_ENV
+
+      - name: Build and push Docker image using Docker Compose
+        run: |
+          docker compose build
+          docker compose push
+
+jobs:
   determine-runner:
     runs-on: ubuntu-latest
     env:
