--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -13,12 +13,16 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-x86:
-    name: Build on x86
-    runs-on: [self-hosted, X86]  
+  build-and-push-to-dockerhub:
+    name: Build and Push to Docker Hub
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Determine Architecture
+        id: arch
+        run: echo "ARCHITECTURE=$(uname -m)" >> $GITHUB_ENV
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -29,44 +33,21 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
-          platforms: amd64
+          platforms: ${{ env.ARCHITECTURE == 'x86_64' && 'amd64' || 'arm64' }}
 
-      - name: Set Docker platform based on the runner
+      - name: Set Docker platform based on the architecture
         run: |
-          echo "DOCKER_DEFAULT_PLATFORM=linux/amd64" >> $GITHUB_ENV
+          if [ "${ARCHITECTURE}" == "x86_64" ]; then
+            echo "DOCKER_DEFAULT_PLATFORM=linux/amd64" >> $GITHUB_ENV
+          else
+            echo "DOCKER_DEFAULT_PLATFORM=linux/arm64" >> $GITHUB_ENV
+          fi
 
       - name: Build and push Docker image using Docker Compose
         run: |
           docker compose build
           docker compose push
 
-  build-arm64:
-    name: Build on ARM64
-    runs-on: [self-hosted, ARM64] 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
-
-      - name: Set Docker platform based on the runner
-        run: |
-          echo "DOCKER_DEFAULT_PLATFORM=linux/arm64" >> $GITHUB_ENV
-
-      - name: Build and push Docker image using Docker Compose
-        run: |
-          docker compose build
-          docker compose push
-          
   deploy-on-host:
     runs-on: self-hosted
     needs: [build-and-push-to-dockerhub]
