--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -55,7 +55,7 @@ jobs:
     - name: Deploy to Self-Hosted
       env:
         BRANCH: main
-        CONTAINER_DIR: ${{env.HOME}}/telegram-bot-protests-in-berlin
+        CONTAINER_DIR: telegram-bot-protests-in-berlin
         CONTAINER_NAME_1: postgres_db
         CONTAINER_NAME_2: protestcrawler
         CONTAINER_NAME_3: telegrambot
@@ -67,7 +67,7 @@ jobs:
         export TG_BOT_TOKEN=$TG_BOT_TOKEN && 
         export IP_ADDRESS=$IP_ADDRESS && 
         export SSL_PORT=$SSL_PORT && 
-        cd $CONTAINER_DIR  && 
+        cd ${{env.HOME}}/$CONTAINER_DIR  && 
         git fetch --all  && 
         git rev-parse --verify --quiet $BRANCH &&
         git checkout $BRANCH  && 
