--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     container_name: protestcrawler
     build: "protestcrawler"
     image: ${PROTESTCRAWLER_IMAGE_BUILD:-sfarhad/protestcrawler:2.0.0}
+    environment:
+      - DB_UPDATE_PERIOD=${DB_UPDATE_PERIOD}
     volumes:
       - ./protestcrawler/output:/app/output
   telegrambot:
