--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -61,10 +61,12 @@ jobs:
         CONTAINER_NAME_3: telegrambot
         CONTAINER_NAME_4: tor_privoxy
         TG_BOT_TOKEN: ${{secrets.TG_BOT_TOKEN}}
+        DB_UPDATE_PERIOD: ${{secrets.DB_UPDATE_PERIOD}}
         IP_ADDRESS: ${{secrets.IP_HOST}}
         SSL_PORT: ${{secrets.SSL_PORT}}
       run: |
         export TG_BOT_TOKEN=$TG_BOT_TOKEN && 
+        export DB_UPDATE_PERIOD=$DB_UPDATE_PERIOD && 
         export IP_ADDRESS=$IP_ADDRESS && 
         export SSL_PORT=$SSL_PORT && 
         cd ${HOME}/$CONTAINER_DIR  && 
