--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -14,15 +14,10 @@ on:
 
 jobs:
   build-and-push-to-dockerhub:
-    name: Build and Push to Docker Hub
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Determine Architecture
-        id: arch
-        run: echo "ARCHITECTURE=$(uname -m)" >> $GITHUB_ENV
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -30,23 +25,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx with QEMU
+        uses: docker/setup-buildx-action@v3
         with:
-          platforms: ${{ env.ARCHITECTURE == 'x86_64' && 'amd64' || 'arm64' }}
+          platform: [linux/arm64]
+          install: true
 
-      - name: Set Docker platform based on the architecture
-        run: |
-          if [ "${ARCHITECTURE}" == "x86_64" ]; then
-            echo "DOCKER_DEFAULT_PLATFORM=linux/amd64" >> $GITHUB_ENV
-          else
-            echo "DOCKER_DEFAULT_PLATFORM=linux/arm64" >> $GITHUB_ENV
-          fi
-
-      - name: Build and push Docker image using Docker Compose
-        run: |
-          docker compose build
-          docker compose push
+      - name: Build and push arm64 image
+        run: docker build bake --push --file docker-compose.yml
 
   deploy-on-host:
     runs-on: self-hosted
