--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -28,11 +28,13 @@ jobs:
       - name: Set up Docker Buildx with QEMU
         uses: docker/setup-buildx-action@v3
         with:
-          platform: linux/arm64
+          platforms: linux/arm64
           install: true
 
       - name: Build and push arm64 image
-        run: docker build bake --push --file docker-compose.yml
+        run: |
+          docker compose build
+          docker compose push
 
   deploy-on-host:
     runs-on: self-hosted
