Use docker buildx to build for arm64 arch
Since docker compose is not as configurable to set the arch

--- a/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
+++ b/.github/workflows/build-and-push-to-dockerhub-deploy-on-host.yaml
@@ -33,8 +33,7 @@ jobs:
 
       - name: Build and push arm64 image
         run: |
-          docker compose build
-          docker compose push
+        docker buildx bake --push --file docker-compose.yml
 
   deploy-on-host:
     runs-on: self-hosted
