--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - DB_UPDATE_PERIOD=${DB_UPDATE_PERIOD}
     volumes:
       - ./protestcrawler/output:/app/output
+    command: ["sh", "-c", "python protestcrawler.py >> /app/output/protestcrawler.logs 2>&1"]
   telegrambot:
     container_name: telegrambot
     build: "telegrambot"
@@ -38,3 +39,4 @@ services:
       - TG_BOT_TOKEN=${TG_BOT_TOKEN}
     volumes:
       - ./telegrambot/output:/app/output
+    command: ["sh", "-c", "/app/initial-setup-files/webhook-setup.sh && /app/initial-setup-files/nginx-setup.sh && nginx && gunicorn -w 2 --bind 0.0.0.0:5000 wsgi:app >> /app/output/telegram.logs 2>&1"]
